Added new file to the repository

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-hello this is suresh
+<html>
+<head>
+
+</head>
+<body>
+<p id="para">suresh</p>
+<a href="google.com"></a>
+<a href="gmail.com"></a>
+<a href="facebook.com"></a>
+<script>
+var e=document.getElementsById('tagName').innerHTML="suresh";
+
+for(i=0;i<e.length;i++){
+   e.setAttribute(e[i].value);
+}
+
+</script>
+</body>
+</html>
