--- a/index1.html
+++ b/index1.html
@@ -1,16 +1,21 @@
 <html>
-<head></head>
+
+<head>
+
+</head>
+
 <body>
-<div id="main">
-<table id="tblemplyees">
-<tr>
-<td>empid</td>
-<td>empname</td>
-<td>empdepartment</td>
-<td>empdesignation</td>
-</tr>
-</table>
-</div>
-<script src="app.js"></script>
+    <div id="main">
+        <table id="tblEmployee">
+            <tr>
+                <td>Employee Id</td>
+                <td>Name</td>
+                <td>Designation</td>
+                <td>Department</td>
+            </tr>
+        </table>
+    </div>
+    <script src="app.js"></script>
 </body>
+
 </html>
